--- a/my-blog-website/src/App.scss
+++ b/my-blog-website/src/App.scss
@@ -358,7 +358,7 @@ a {
     position: absolute;
     margin: 0;
     font-size: 36px;
-    color: #fff;
+    // color: #fff;
     z-index: 2;
   }
 
